--- a/index.html
+++ b/index.html
@@ -1,38 +1,18 @@
-<!DOCTYPE html>
 <html>
-<head>
-	<!-- This title is used for tabs and bookmarks -->
-	<title>Mariana's Homepage</title>
-
-	<!-- Use UTF character set, a good idea with any webpage -->
-	<meta charset="UTF-8" />
-	<!-- Set viewport so page remains consistently scaled w narrow devices -->
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-	<!-- Include a sitewide CSS file for consistent styling across the site -->
-	<link rel="stylesheet" type="text/css" href="css/site.css">
-	<!-- Lab-specifc CSS file for any special styling of this particular page -->
-	<link rel="stylesheet" type="text/css" href="css/homepage.css">
-	<!-- Link to javascript file - DEFER waits until all elements are rendered -->
-
-	<!-- <script type="text/javascript" src="./js/lab.js" DEFER></script> -->
-</head>
-<body>
-	<!-- Style this page by changing the CSS in ../css/site.css or css/lab.css -->
-	<main id="content">
-		<section>
-			<h1>Mariana's Homepage</h1>
-			<div class="minor-section">
-					<!-- Note that all filenames use lowercase and no spaces -->
-					<img class="cat-photo" src="./img/cute-grey-kitten.jpg">
-					<h2>About Me</h2>
-					<p>Tell us about yourself. Add photos. Customize this. Go crazy.</p>
-			</div>
-
-		</section>
-		<nav id="links">
-			<!-- Put links to labs here. -->
-		</nav>
-	</main>
-</body>
+	<head> 
+		<title> Mariana Acosta </title>
+	</head>
+	<body>
+        <h1> Mariana Acosta </h1>
+		<P> Mariana is a 20  year old studnet at UCSC. As a 3rd yera, Mariana is currently completing her Bachlors degree in Education and Theater. Marian enjoys wtcahing movies in her fre time suhc as "Frozen", "Into the Spiderverse", and "How to Train your Dragon".  </P>
+		<img id="my-portrait" src="https://mail.google.com/mail/u/2?ui=2&ik=08a5786fc9&attid=0.1&permmsgid=msg-f:1796622950104477802&th=18eee30de04ab06a&view=fimg&fur=ip&sz=s0-l75-ft&attbid=ANGjdJ8-apkTHj_6OLmk-RmHN9ZRxbwgsV_xvo3gSJk2un5VVmSLxqZhtlHuXK3a9f3hs0pnTC4EMPhswoCHf-nI5Vik8KrIJd-hHqH004a1tuTEPiZ4vnAyYw8ib1A&disp=emb&realattid=18eee309c5f82bb6d5b1" width="400" height="400"/> 
+    </body>
+        <li> <a href="lab1/index.html">Lab 1 Getting Started</a> </li>
+        <li> <a href="lab2/index.html">Lab 2 HTML & CSS Starter</a> </li>
+        <li> <a href="lab3/index.html">Lab 3 File Structures</a> </li>
+        <li> <a href="lab4/index.html">Lab 4 Pseudocoding and Problem-solving</a> </li>
+        <li> <a href="lab5/index.html">Lab 5 Data Types and Variables</a> </li>
+        <li> <a href="lab6/index.html">Lab 6 Arrays and Objects</a> </li>
+    
 </html>
+	
