--- a/lab3/index.html
+++ b/lab3/index.html
@@ -1,52 +1,23 @@
-<!DOCTYPE html>
 <html>
-<head>
-	<!-- This title is used for tabs and bookmarks -->
-	<title>Lab X - Subject/Topic</title>
-
-	<!-- Use UTF character set, a good idea with any webpage -->
-  	<meta charset="UTF-8" />
-	<!-- Set viewport so page remains consistently scaled w narrow devices -->
-  	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	
-	<!-- Include a sitewide CSS file for consistent styling across the site -->
-	<link rel="stylesheet" type="text/css" href="../css/site.css">
-	<!-- Lab-specifc CSS file for any special styling of this particular page -->
-	<link rel="stylesheet" type="text/css" href="css/lab.css">
-	
-	<!-- load jQuery library to make javascript easier (must be above our lab js)-->
-	<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-	<!-- Link to javascript file - DEFER waits until all elements are rendered -->
-	<script type="text/javascript" src="./js/lab.js" DEFER></script>
-</head>
-<body>
-	<!-- Style this page by changing the CSS in ../css/site.css or css/lab.css -->
-	<main id="content">
-		<section>
-			<h1>Lab X - Subject/Topic</h1>
-			<div class="minor-section">
-					<h2>Challenge</h2>
-					<p>Restate the challenge of the lab here.</p>
-			</div>
-
-			<div class="minor-section">
-					<h2>Problems</h2>
-					<p>What problems arose? How did you solve them? </p>
-			</div>
-
-			<div class="minor-section">
-					<h2>Reflection</h2>
-					<p>Put your reflections about this assignment here. How did it go? What kind of energy did you put into the assignment? </p>
-			</div>
-
-			<div class="minor-section">
-					<h2>Results</h2>
-					<div id="output"></div>
-			</div>
-		</section>
-		<nav id="links">
-			<!-- Put links to other pages (including the homepage) here. -->
-		</nav>
-	</main>
-</body>
+	<head> 
+		<title> Lab 3 File Structure and File Transfer </title>
+	</head>
+	<body>
+		<h1>Lab 3 File Structure and File Transfer </h1>
+		<P> The idea of the lab is to create a local file structure on my computer, add index.html files, and upload to the server </P>
+		<h2> Challenges </h2>
+		<p> We had some difficultly wokring on getting the image to look the right size and also replacing the image of the cat. Both images kept showing up and we were struggling. Once we were able to fully replace the image we still couldn't downsize the image. We eventually figured it out  through trail and error. </p>
+		<h2> Results </h2>
+		<p> We were able to get the site to look good and our file structure was up to standard. </p>
+		<img id="my-portrait" src="https://mail.google.com/mail/u/0?ui=2&ik=08c3437a21&attid=0.1&permmsgid=msg-a:r1220727591084457320&th=18eee1b27281e9d1&view=att&disp=safe&realattid=f_lv4d7b300" width="700" height="500"/> 
+		<h2> Screenshots </h2>
+		<p> index.html source code </p>
+		<img id="my-portrait" src="https://mail.google.com/mail/u/0?ui=2&ik=08c3437a21&attid=0.1&permmsgid=msg-a:r7133707475168414147&th=18eee5300b2dc81b&view=att&disp=safe&realattid=f_lv4fcykf0" width="700" height="500"/> 
+		<p> index.html site </p>
+		<img id="my-portrait" src="https://mail.google.com/mail/u/0?ui=2&ik=08c3437a21&attid=0.2&permmsgid=msg-a:r7133707475168414147&th=18eee5300b2dc81b&view=att&disp=safe&realattid=f_lv4fd31d1" width="700" height="500"/>
+		<p> lab3 index.html code </p>
+		<img id="my-portrait" src="https://mail.google.com/mail/u/0?ui=2&ik=08c3437a21&attid=0.3&permmsgid=msg-a:r7133707475168414147&th=18eee5300b2dc81b&view=att&disp=safe&realattid=f_lv4fd7l42" width="700" height="500"/>
+		<p> lab3 index.html site </p>
+		<img id="my-portrait" src="https://mail.google.com/mail/u/0?ui=2&ik=08c3437a21&attid=0.4&permmsgid=msg-a:r7133707475168414147&th=18eee5300b2dc81b&view=att&disp=safe&realattid=f_lv4fdmxr3" width="700" height="500"/>
+	</body>
 </html>
