--- a/lab5/index.html
+++ b/lab5/index.html
@@ -1,52 +1,21 @@
-<!DOCTYPE html>
-<html>
+<html> 
 <head>
-	<!-- This title is used for tabs and bookmarks -->
-	<title>Lab X - Subject/Topic</title>
-
-	<!-- Use UTF character set, a good idea with any webpage -->
-  	<meta charset="UTF-8" />
-	<!-- Set viewport so page remains consistently scaled w narrow devices -->
-  	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	
-	<!-- Include a sitewide CSS file for consistent styling across the site -->
-	<link rel="stylesheet" type="text/css" href="../css/site.css">
-	<!-- Lab-specifc CSS file for any special styling of this particular page -->
-	<link rel="stylesheet" type="text/css" href="css/lab.css">
-	
-	<!-- load jQuery library to make javascript easier (must be above our lab js)-->
-	<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-	<!-- Link to javascript file - DEFER waits until all elements are rendered -->
-	<script type="text/javascript" src="./js/lab.js" DEFER></script>
+    <title>Lab 5: Data Types and Variables</title>
+    <link rel="stylesheet" type="text/css" href="C:\Users\ma631\Documents\GitHub\ART101\lab5\css\lab.css"> 
 </head>
-<body>
-	<!-- Style this page by changing the CSS in ../css/site.css or css/lab.css -->
-	<main id="content">
-		<section>
-			<h1>Lab X - Subject/Topic</h1>
-			<div class="minor-section">
-					<h2>Challenge</h2>
-					<p>Restate the challenge of the lab here.</p>
-			</div>
-
-			<div class="minor-section">
-					<h2>Problems</h2>
-					<p>What problems arose? How did you solve them? </p>
-			</div>
-
-			<div class="minor-section">
-					<h2>Reflection</h2>
-					<p>Put your reflections about this assignment here. How did it go? What kind of energy did you put into the assignment? </p>
-			</div>
-
-			<div class="minor-section">
-					<h2>Results</h2>
-					<div id="output"></div>
-			</div>
-		</section>
-		<nav id="links">
-			<!-- Put links to other pages (including the homepage) here. -->
-		</nav>
-	</main>
+<body> 
+    <div id="content">
+        <img id="my-portrait" src="c:\Users\ma631\Desktop\taurus.jpg" width="500" height="400"/>
+        <h1>Lab 5: Data Types and Variables</h1>
+        <p>Working with your partner, experiment with basic JavaScript data types and variables.</p>
+        <h2>Challenges</h2>
+        <p>We had some trouble linking the script output, the CSS, and linking the image over to the index.</p>
+        <h2>Results</h2>
+        <p>We eventually figure dout the image and css problmes. No matter what we tried/researched we could not figure out why out js wouldn't link?</p>
+        <div>
+            <h2>Script Output</h2>
+            <script src="js/lab.js"></script>
+        </div>
+    </div>
 </body>
 </html>
