--- a/lab6/index.html
+++ b/lab6/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html>
-<head>
+<html> 
+<head> 
 	<!-- This title is used for tabs and bookmarks -->
 	<title>Lab 6: Arrays and Objects</title>
-
+	
 	<!-- Use UTF character set, a good idea with any webpage -->
   	<meta charset="UTF-8" />
 	<!-- Set viewport so page remains consistently scaled w narrow devices -->
@@ -13,14 +13,15 @@
 	<link rel="stylesheet" type="text/css" href="../css/site.css">
 	<!-- Lab-specifc CSS file for any special styling of this particular page -->
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
-	
+
 	<!-- load jQuery library to make javascript easier (must be above our lab js)-->
 	<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 	<!-- Link to javascript file - DEFER waits until all elements are rendered -->
 	<script type="text/javascript" src="./js/lab.js" DEFER></script>
+	
 </head>
 <body>
-	<!-- Style this page by changing the CSS in ../css/site.css or css/lab.css -->
+	
 	<main id="content">
 		<section>
 			<h1>Lab 6: Arrays and Objects</h1>
@@ -30,13 +31,21 @@
 					<p>Restate the challenge of the lab here.</p>
 			</div>
 			<div class="minor-section">
+				<h2>Problems</h2>
+				<p>We had problmes linking our JS over to the html.</p>
+				<div id="output"></div>
+			</div>
+			<div class="minor-section">
 					<h2>Results</h2>
+					<p>Restate the challenge of the lab here.</p>
 					<div id="output"></div>
 			</div>
+			<div>
+				<h2>Script Output</h2>
+				<script src="js/lab.js"></script>
+			</div>
 		</section>
-		<nav id="links">
-			<!-- Put links to other pages (including the homepage) here. -->
-		</nav>
 	</main>
+	<img id="my-portrait" src="https://i5.walmartimages.com/asr/a5c51996-1079-4044-ad19-c8009e723264_1.46f1dde571c9a3a627d63665ec7d012d.jpeg?odnWidth=1000&odnHeight=1000&odnBg=ffffff" width="300" height="300"/>
 </body>
 </html>
