--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>
 	<head> 
 		<title> Mariana Acosta </title>
-	</head>
+        <link rel="stylesheet" types="text/css" href="css/index.css">
+    </head>
 	<body>
         <h1> Mariana Acosta </h1>
 		<P> Mariana is a 20  year old studnet at UCSC. As a 3rd yera, Mariana is currently completing her Bachlors degree in Education and Theater. Marian enjoys wtcahing movies in her fre time suhc as "Frozen", "Into the Spiderverse", and "How to Train your Dragon".  </P>
