--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
         <li> <a href="lab8/index.html">Lab 8 Anon Functions and Callbacks</a> </li>
         <li> <a href="lab9/index.html">Lab 9 Anon Functions and Callbacks</a> </li>
         <li> <a href="lab10/index.html">Lab 10 JavaScript for the Web</a> </li>
-        <li> <a href="lab11/index.html">Lab 11 - JavaScript Events and Forms</a> </li>
-        <li> <a href="lab12/index.html">Lab 12 - Conditionals</a> </li>
+        <li> <a href="lab11/index.html">Lab 11 JavaScript Events and Forms</a> </li>
+        <li> <a href="lab12/index.html">Lab 12 Conditionals</a> </li>
+        <li> <a href="lab13/index.html">Lab 13 Loops</a> </li>
 
     </body>
 </html>
