--- a/lab7/index.html
+++ b/lab7/index.html
@@ -1,20 +1,55 @@
+<!DOCTYPE html>
 <html>
-	<head> 
-		<title> Lab 7: Functions </title>
-        <link rel="stylesheet" type="text/css" href="lab7\lab.css">
-    </head>
-	<body>
-        <div id="content">
-            <h1> Lab 7: Functions </h1>
-            <p> Working with your partner, write functions that take user input and manipulate a string. </p>
-            <h2> Challenges </h2>
-            <p> The JS would not scrpit into the site. We ran teh Js to make sure it worked porperly and checked to make sure we coded it properly into the <html></html> </p>
-            <h2> Results </h2>
-            <p> We reworked the JS and compared eachoters code. We figured out the problems and got the JS to work. </p>
-            <div>
-                <h2>Script Output</h2>
-                <script src="js/lab7.js"></script>
-            </div>
-        </div>
-    </body>
+<head>
+	<!-- This title is used for tabs and bookmarks -->
+	<title>Lab 7</title>
+
+	<!-- Use UTF character set, a good idea with any webpage -->
+  	<meta charset="UTF-8" />
+	<!-- Set viewport so page remains consistently scaled w narrow devices -->
+  	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	
+	<!-- Include a sitewide CSS file for consistent styling across the site -->
+	<!-- Lab-specifc CSS file for any special styling of this particular page -->
+	<link rel="stylesheet" type="text/css" href="css/lab.css">
+	
+	<!-- load jQuery library to make javascript easier (must be above our lab js)-->
+	<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+	<!-- Link to javascript file - DEFER waits until all elements are rendered -->
+	<script type="text/javascript" src="./js/lab.js" DEFER></script>
+</head>
+<body>
+	<!-- Style this page by changing the CSS in ../css/site.css or css/lab.css -->
+	<main id="content">
+		<section>
+			<h1>Lab 7 - Functions</h1>
+			<div class="minor-section">
+					<h2>Challenge</h2>
+					<p>We were tasked with writing functions that take user input and manipulate a string.</p>
+			</div>
+
+			<div class="minor-section">
+					<h2>Problems</h2>
+					<p>Problems that we faced were getting the javascript code to appear onto the default web browser.</p>
+			</div>
+
+			<div class="minor-section">
+					<h2>Reflection</h2>
+					<p>I thought that this assignmnet was really interesting to work on and a little frustrating but 
+					I think I'm getting the hang of it.</p>
+			</div>
+
+			<div class="minor-section">
+					<h2>Results</h2>
+					<div id="output"></div>
+					<h2>Script Output</h2>
+					<script src="js/lab7.js"></script>
+					
+			</div>
+		</section>
+		<nav id="links">
+			<!-- Put links to other pages (including the homepage) here. -->
+		</nav>
+	</main>
+</body>
 </html>
